@@ -47,6 +47,10 @@ class MapObject(helpers.LayerElementMixin):
 
             Type of the object. A string (or unicode). No semantics attached.
 
+        .. attribute:: id
+
+            Unique numeric ID of the object.
+
     Other attributes:
 
         .. attribute:: objtype
@@ -72,14 +76,21 @@ class MapObject(helpers.LayerElementMixin):
         .. attribute:: pixel_x
         .. attribute:: pixel_y
     """
+    # XXX: Implement `id` -- "Even if an object is deleted, no object ever gets
+    # the same ID."
     pixel_x, pixel_y = helpers.unpacked_properties('pixel_pos')
 
-    def __init__(self, layer, pixel_pos, name=None, type=None):
+    def __init__(
+        self, layer, pixel_pos,
+        *,
+        name=None, type=None, id=None,
+    ):
         self.layer = layer
         self.pixel_pos = pixel_pos
         self.name = name
         self.type = type
         self.properties = {}
+        self.id = id
 
     @property
     def pos(self):
@@ -132,9 +143,12 @@ class MapObject(helpers.LayerElementMixin):
 
 
 class PointBasedObject(MapObject):
-    def __init__(self, layer, pixel_pos, size=None, pixel_size=None, name=None,
-            type=None, points=()):
-        MapObject.__init__(self, layer, pixel_pos, name, type)
+    def __init__(
+        self, layer, pixel_pos,
+        *,
+        size=None, pixel_size=None, name=None, type=None, points=(), id=None,
+    ):
+        MapObject.__init__(self, layer, pixel_pos, name=name, type=type, id=id)
         self.points = list(points)
 
     @helpers.from_dict_method
@@ -184,9 +198,12 @@ class PolylineObject(PointBasedObject):
 
 
 class SizedObject(helpers.TileMixin, MapObject):
-    def __init__(self, layer, pixel_pos, size=None, pixel_size=None, name=None,
-            type=None):
-        MapObject.__init__(self, layer, pixel_pos, name, type)
+    def __init__(
+        self, layer, pixel_pos,
+        *,
+        size=None, pixel_size=None, name=None, type=None, id=None,
+    ):
+        MapObject.__init__(self, layer, pixel_pos, name=name, type=type, id=id)
         if pixel_size:
             if size:
                 raise ValueError('Cannot specify both size and pixel_size')
@@ -262,13 +279,18 @@ class RectangleObject(tile.TileLikeObject, SizedObject):
     shared with tiles.
     """
 
-    def __init__(self, layer, pixel_pos, size=None, pixel_size=None, name=None,
-            type=None, value=0):
+    def __init__(
+        self, layer, pixel_pos,
+        *,
+       size=None, pixel_size=None, name=None, type=None, value=0, id=None,
+    ):
         tile.TileLikeObject.__init__(self)
         self.layer = layer
         self.value = value
         SizedObject.__init__(
-            self, layer, pixel_pos, size, pixel_size, name, type)
+            self, layer, pixel_pos, size=size, pixel_size=pixel_size,
+            name=name, type=type, id=id,
+        )
 
     def __nonzero__(self):
         return True
